# Cheminformatics

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cheminformatics/: clustering.py  validation.py
chemspace/: __init__.py  curation.py  diversity.py  enumeration.py  filters.py  fingerprints.py
sample_data/: example_molecules.csv
